<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.powerhost.clemente.MainActivity">

<!-- <TextView
     android:id="@+id/textView_HolaMundo"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Hello world!" />

 <TextView
     android:id="@+id/textView_Nombre"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Miguel" />

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="asdasdasd"/>
-->


<EditText
    android:layout_marginTop="45dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:id="@+id/editText_usuarioRegistro"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:hint="@string/usuario" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:ems="10"
    android:id="@+id/editText_claveRegistro"
    android:layout_below="@+id/editText_usuarioRegistro"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignRight="@+id/editText_usuarioRegistro"
    android:layout_alignEnd="@+id/editText_usuarioRegistro"
    android:hint="@string/clave" />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editText_claveRegistro"
    android:layout_centerHorizontal="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:id="@+id/button_ingresar"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:id="@+id/button_registro"
        android:layout_weight="1" />
</LinearLayout>
</RelativeLayout>