<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.powerhost.clemente.SignUpActivity">

    <EditText
        android:id="@+id/editText_usuarioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_claveRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText_usuarioRegistro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_usuarioRegistro"
        android:layout_below="@+id/editText_usuarioRegistro"
        android:ems="10"
        android:hint="@string/clave"
        android:inputType="textPassword" />

    <Button
        android:layout_below="@+id/editText_claveRegistro"
        android:id="@+id/button_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro" />

</RelativeLayout>
